Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.12-dev-190-gd6cfeaef5105dc6db2f12682bc48f17f9caacdcc
Description
0.4.12-RC-41-g1a9f0bc gcc dbg linux is affected.
I tested: both versions are affected:
- FreeBASIC 1.06.0 that we currently have in rapps
- FreeBASIC 1.05.0 that we previously had in rapps
Reproduction steps
- install FreeBASIC
- run "open [Freebasic] console" from startmenu
- type "fbc" at the prompt and hit enter
- the app will start to write some help text on the screen
Expected result
The text appears quickly line by line and the displayed text should not flash
2k3sp2.webm![]()
Observed result
The text is displayed line by line and as soon as it hits the bottom of the cmd window,
the update gets very slow and for each line the cmd window becomes black for the fraction of a second.
Upon each line we log a single line to the log, like:
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T75, R79, B99}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T76, R79, B100}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T77, R79, B101}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T78, R79, B102}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T79, R79, B103}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T80, R79, B104}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T81, R79, B105}) called
|
(win32ss/user/winsrv/consrv/conoutput.c:1040) SrvSetConsoleWindowInfo(0x00000007, 1, {L0, T82, R79, B106}) called
|
See 0.4.12-RC-41-g1a9f0bc__freebasic.log
and
0.4.12-RC-41-g1a9f0bc__freebasic.webm![]()
Attachments
Issue Links
- relates to
-
CORE-16187 FreeBASIC 1.06.0 from rapps, cmd text output slightly flashes (the screen is filled with black color)
-
- Resolved
-
-
CORE-14856 [WIN32SS][FONT] Simplify filling the background of text
-
- Resolved
-