[0.4.12][WIN32SS][FREETYPE] Fix performance regression FreeBASIC console output CORE-16177

By restoring historic state of GreExtTextOutW() / IntExtTextOutW()

This reverts guilty rev 0.4.12-dev-190-g
d6cfeaef5105dc6db2f12682bc48f17f9caacdcc
as well as some follow ups that dealt with new errors popping up afterwards.
The revert got ack of Katayama Hirofumi MZ.

Test VBox on master: https://reactos.org/testman/compare.php?ids=68471,68475
Test KVM on master: https://reactos.org/testman/compare.php?ids=68472,68476

I intend to restore the function to that same state in master today.